<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    android:orientation="vertical"
    tools:context=".Two">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblText2"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtHint"
        android:inputType="textMultiLine"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText21" />

    <Button
        android:id="@+id/btn23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText3" />
</LinearLayout>