<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    android:orientation="vertical"
    tools:context=".One">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lblText1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtHint"
        android:inputType="textMultiLine"
        android:text="@string/txtText1" />

    <Button
        android:id="@+id/btn12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText11" />

    <Button
        android:id="@+id/btn13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnText3" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:cropToPadding="false"
            android:scaleType="fitEnd"
            android:scrollbarSize="24dp"
            android:src="@android:drawable/btn_dialog"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            tools:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/pad"
            android:text="TextView"
            android:textSize="24sp" />

    </FrameLayout>

</LinearLayout>